@@ -1,5 +1,6 @@
   - Fix link in 'Writing Filters' section of
     Message::Passing::Manual::Components
+  - Fix daemonize_if_needed spelling
   - Add documentation for all command line options
 
 0.115 2014-08-23T09:55:00+03:00 YAPC::EU 2014 release
